--- a/index.html
+++ b/index.html
@@ -66,6 +66,14 @@
     <li><a href="tp-3/index.html" target="_blank">Tarea 3 - </a></li>
     <li><a href="tp-4/index.html" target="_blank">Tarea 4 - </a></li>
     <li><a href="tp-5/index.html" target="_blank">Tarea 5 - </a></li>
+     <li><a href="tp-5/index.html" target="_blank">Tarea 6 - </a></li>
+     <li><a href="tp-5/index.html" target="_blank">Tarea 7 - </a></li>
+     <li><a href="tp-5/index.html" target="_blank">Tarea 8 - </a></li>
+     <li><a href="tp-5/index.html" target="_blank">Tarea 9 - </a></li>
+     <li><a href="tp-5/index.html" target="_blank">Tarea 10 - </a></li>
+     <li><a href="tp-5/index.html" target="_blank">Tarea 11- </a></li>
+     <li><a href="tp-5/index.html" target="_blank">Tarea 12- </a></li>
+     <li><a href="tp-5/index.html" target="_blank">Tarea 13- </a></li>
   </ul>
 </center>
 </main>
