--- a/tp-9/index.html
+++ b/tp-9/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1>Listas en JavaScript</h1>
     <p>Completar con la implementación de las funciones solicitadas en los comentarios del archivo <code>listas.js</code>.</p>
-    <script src="listas.js"></script>
+    <script src="Listas.js"></script>
 </body>
 </html>
+
