--- a/tp-11/index.html
+++ b/tp-11/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1>Listas y Objetos en JavaScript</h1>
     <p>Completar con la implementación de las funciones solicitadas en los comentarios del archivo <code>listas-y-objetos.js</code>.</p>
-    <script src="listas-y-objetos.js"></script>
+    <script src="lists-y-objetos.js"></script>
 </body>
+
 </html>
